Set width on main content so that the email doesn’t get too wide and create wrapping issues. Cause the comment tracking url to wrap more consistently.

--- a/app/assets/stylesheets/mailers/comment_mailer.css.scss
+++ b/app/assets/stylesheets/mailers/comment_mailer.css.scss
@@ -5,8 +5,12 @@
   padding: 3px 5px;
   border-top: 1px solid #CCC;
   border-bottom:1px solid #CCC;
-  }
+}
+
 #main-content {
+  width: 680px;
+  overflow: hidden;
+
   .intro {
     padding-bottom: 20px;
 
@@ -18,7 +22,10 @@
       text-align: center;
       font-size: 18px;
 
-      .tracking_number { font-family: courier; }
+      .tracking_number {
+        font-family: courier;
+        word-wrap: break-word;
+      }
     }
   }
 
